--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
     <div class="main">
-        <div id="display"></div>
+        <div id="display">
+            <p id="sc-dis">0</p>
+        </div>
         <div class="buttons">
             <button value="clear" id="clear">C</button>
             <button value="^" id="power">^</button>
